--- a/package.json
+++ b/package.json
@@ -26,10 +26,8 @@
     "gulp-imagemin": "^7.1.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-svg-sprite": "^1.5.0",
     "node-sass": "^7.0.1",
     "sass": "^1.49.9"
-  },
-  "dependencies": {
-    "gulp-svg-sprite": "^1.5.0"
   }
 }
