--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "gulp-svg-sprite": "^1.5.0",
+    "gulp-webp": "^4.0.1",
     "node-sass": "^7.0.1",
     "sass": "^1.49.9"
+  },
+  "dependencies": {
+    "imagemin-webp": "^5.1.0"
   }
 }
